// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<ForwardRef(Grid)
  container={true}
  direction="column"
  item={true}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(ButtonGroup)
      aria-label="split button"
      className="buttonGroup"
      classes={
        Object {
          "root": "buttonGroupDisabled",
        }
      }
      color="secondary"
      disabled={true}
      variant="outlined"
    >
      <Memo(ForwardRef)
        aria-haspopup="true"
        className="buttonOverwritesLeft"
        color="secondary"
        customlabelclasses="labelOverwrites"
        label="one"
        onClick={[Function]}
        size="small"
        startIcon={<Memo />}
        variant="outlined"
      />
      <Memo(ForwardRef)
        className="buttonOverwritesRight"
        color="secondary"
        label={<Memo />}
        onClick={[Function]}
        variant="outlined"
      />
    </ForwardRef(ButtonGroup)>
    <ForwardRef(Popper)
      anchorEl={null}
      disablePortal={true}
      open={false}
      placement="bottom-start"
      transition={true}
    >
      <Component />
    </ForwardRef(Popper)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;

exports[`Snapshot Testing Required Props 1`] = `
<ForwardRef(Grid)
  container={true}
  direction="column"
  item={true}
>
  <ForwardRef(Grid)
    item={true}
    xs={12}
  >
    <ForwardRef(ButtonGroup)
      aria-label="split button"
      className="buttonGroup"
      classes={
        Object {
          "root": "",
        }
      }
      color="primary"
      variant="contained"
    >
      <Memo(ForwardRef)
        aria-haspopup="true"
        className="buttonOverwritesLeft"
        color="primary"
        customlabelclasses="labelOverwrites"
        label="one"
        onClick={[Function]}
        size="small"
        startIcon={<Memo />}
        variant="contained"
      />
      <Memo(ForwardRef)
        className="buttonOverwritesRight"
        color="primary"
        label={<Memo />}
        onClick={[Function]}
        variant="contained"
      />
    </ForwardRef(ButtonGroup)>
    <ForwardRef(Popper)
      anchorEl={null}
      disablePortal={true}
      open={false}
      placement="bottom-start"
      transition={true}
    >
      <Component />
    </ForwardRef(Popper)>
  </ForwardRef(Grid)>
</ForwardRef(Grid)>
`;
